# asassddf

./: CMakeLists.txt  Runtests.sh  gcommand.txt  p.txt
src/: headers.h  main.cpp
tests/: main_test.cpp
